# moqui_nextlevel

./: CMakeCache.txt  CMakeLists.txt  R_plan_phase3.txt  Rev_plan_F.md  moqui_tps.in  수정계획_F - 복사본.md  수정계획_F.md
base/: mqi_fippel_physics.hpp  mqi_grid3d.hpp  mqi_interaction.hpp  mqi_math.hpp  mqi_p_ionization.hpp  mqi_physics_data.cu  mqi_physics_data.hpp  mqi_po_elastic.hpp  mqi_po_inelastic.hpp  mqi_pp_elastic.hpp  mqi_rect3d.hpp  mqi_scorer.hpp  mqi_track.hpp  mqi_treatment_session.hpp  mqi_vec.hpp
base/distributions/: mqi_const_1d.hpp  mqi_norm_1d.hpp  mqi_pdfMd.hpp  mqi_phsp6d.hpp  mqi_phsp6d_fanbeam.hpp  mqi_phsp6d_ray.hpp  mqi_phsp6d_uniform.hpp  mqi_uni_1d.hpp
base/environments/: mqi_phantom_env.hpp  mqi_tps_env.hpp
base/materials/: material_table_data.hpp  mqi_material.hpp
kernel_functions/: mqi_physics_processes.cuh  mqi_transport.hpp  mqi_transport_event.hpp
treatment_machines/: mqi_treatment_machine_smc_gtr1.hpp
utils/g4_data_parser/: CMakeLists.txt  main.cpp
